# jni_subthread_beautiful_ok_version

./: local.properties  settings.gradle
app/: build.gradle
app/src/: CMakeLists.txt
app/src/androidTest/java/com/wenwp/tong/: ExampleInstrumentedTest.java
app/src/callbacks/: AbstractCallback.cpp  AbstractCallback.h  BaseCallback.cpp  BaseCallback.h  BaseCallbackInt.cpp  BaseCallbackInt.h  BaseCallbackObject.cpp  BaseCallbackObject.h  BaseCallbackObjectArray.cpp  BaseCallbackObjectArray.h  TeamCallback.cpp  TeamCallback.h  compare.txt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: WlAndroidLog.h  native-lib.cpp
app/src/main/java/com/wenwp/tong/: JNIThread.java  MainActivity.java  RequestCallback.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/sdkout/: JNIOjbectAccessor.cpp  JNIOjbectAccessor.h  UserInfo.cpp  UserInfo.h  androidSdkOut.cpp  androidSdkOut.h
app/src/task/: JNIThreadPool.cpp  JNIThreadPool.h  Task.cpp  Task.h  job.c  job.h
app/src/test/java/com/wenwp/tong/: ExampleUnitTest.java
app/src/testexample2/: testcpool.cpp  testcpool.h  testcpp_pool.cpp  testcpp_pool.h
gradle/wrapper/: gradle-wrapper.properties
